# tunnelforge

./: .env.example  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_APP_SETUP.md  LICENSE  README.ko.md  README.md  SCHEDULE.md  main.py  pyproject.toml  requirements.txt  test-auto-version-2.txt  test-auto-version-3.txt  test-auto-version.txt  test-version-gate.txt  tunnel-manager.spec
.claude/: audit-master-plan-2026-07-08.md  audit-resolution-2026-07-08.md  clean-code-handoff-2026-07-09.md  clean-code-master-plan-2026-07-09.json  clean-code-master-plan-2026-07-09.md  investigation-clean-code-audit-2026-07-09.json  investigation-clean-code-audit-2026-07-09.md  investigation-full-audit-2026-07-08.html  investigation-full-audit-2026-07-08.md  settings.local.json
bootstrapper/: __init__.py  bootstrapper.py  bootstrapper.spec  downloader.py  version_info.py
docs/: cross_engine_migration_plan.md  current_status.md  error_reporting.md  macos_support.md  oneclick_readiness.md  product_maturity_proposal_2026-07-15.html
installer/: TunnelDBManager.iss  TunnelForge.iss
migration_core/: Cargo.toml
migration_core/src/: adapters.rs  compare.rs  ddl.rs  dump.rs  dump_format.rs  import.rs  lib.rs  main.rs  migrate.rs  oneclick.rs  protocol.rs  query.rs  schema.rs
migration_core/tests/: jsonl_cli.rs  live_roundtrip.rs  stress_rss.rs
reports/: export_import_flow_review_20260601.html  export_import_mysqlsh_strict_parallel_20260602.html
scripts/: apple_release_credentials.py  build-bootstrapper.ps1  build-installer  build-installer.bat  build-installer.ps1  build-macos.sh  bump-version  bump_version.py  capture-live-ui-migration-evidence.py  capture-oneclick-charset-derivation-evidence.py  capture-oneclick-charset-evidence.py  capture-oneclick-dry-run-evidence.py  capture-oneclick-real-execution-evidence.py  check-macos-support-gate.py  convert_icon.py  create-release  create-release.ps1  embed_github_credentials.py  github_app_secret_codec.py  macos-download-validation-artifacts.sh  macos-manual-validation-report.sh  package-macos.sh  reset-migration-testdb.sh  rust-core-regression-gate.ps1  setup-labels.sh  smart-release-backup.ps1  smart-release.ps1  smart-release.sh  smart_release.py  smoke-macos-applications-install.sh  smoke-macos-launchagent.sh  validate-live-ui-migration-evidence.py  validate-macos-release.sh  validate-oneclick-charset-derivation-evidence.py  validate-oneclick-charset-evidence.py  validate-oneclick-dry-run-evidence.py  validate-oneclick-real-execution-evidence.py  validate-rust-core-performance-evidence.py  verify_import_enum_index.sql  versioning.py
secrets/: README.md  github-app-private-key.pem.example
src/: __init__.py  update_integrity.py  version.py
tests/: conftest.py  test_app_self_check.py  test_apple_release_credentials.py  test_bootstrapper_integrity.py  test_build_docs.py  test_bump_version.py  test_cancellable_worker.py  test_ci_workflows.py  test_config_manager.py  test_connection_pool.py  test_connection_test_worker.py  test_cross_engine_migration_dialog.py  test_cross_engine_migration_protocol.py  test_cross_engine_migration_worker.py  test_current_status_docs.py  test_db_connector.py  test_db_core_service.py  (+88 more)
(+262 files in other folders)
