[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnelforge"
version = "1.13.4"
description = "SSH Tunnel and MySQL Database Manager"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "sanghyun-io"}]
keywords = ["ssh", "mysql", "tunnel", "database", "migration", "PyQt6"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Database",
]
dependencies = [
    "PyQt6>=6.4.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.0.0,<4.0.0",
    "cryptography>=40.0.0",
    "pymysql>=1.0.0",
    "requests>=2.28.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/sanghyun-io/tunnelforge"
Repository = "https://github.com/sanghyun-io/tunnelforge"
Issues = "https://github.com/sanghyun-io/tunnelforge/issues"

[project.scripts]
tunnelforge = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
