[package]
name = "tunnelforge-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration_core"
path = "src/lib.rs"

[[bin]]
name = "tunnelforge-core"
path = "src/main.rs"

[dependencies]
hex = "0.4"
mysql = "26"
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zstd = "0.13"
